--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 sudo: required
-language: generic
+language: java
 services:
   - docker
 
-before_install: 
+before_install:
+  - chmod +x mvnw
   - wget -qO- https://toolbelt.heroku.com/install.sh | sh 
   - echo "$HEROKU_PASSWORD" | docker login -u "$HEROKU_USERNAME" --password-stdin registry.heroku.com
+
+script:
+  - mvn test -B
 
 deploy: 
   provider: script 
